apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__deferred_fragment_bounds_nullability-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: "std::str::from_utf8(&stream.next_response().await.unwrap().unwrap()).unwrap()"
---
content-type: application/json

{"hasNext":false,"incremental":[{"data":null,"path":["currentUser","activeOrganization","suborga",0],"extensions":{"valueCompletion":[{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",0]},{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",1]},{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",2]}]}},{"data":null,"path":["currentUser","activeOrganization","suborga",1],"extensions":{"valueCompletion":[{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",0]},{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",1]},{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",2]}]}},{"data":null,"path":["currentUser","activeOrganization","suborga",2],"extensions":{"valueCompletion":[{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",0]},{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",1]},{"message":"Cannot return null for non-nullable field Organization.nonNullId","path":["currentUser","activeOrganization","suborga",2]}]}}]}
--graphql--

