apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__errors_on_incremental_responses-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: "std::str::from_utf8(&stream.next_response().await.unwrap().unwrap()).unwrap()"
---
content-type: application/json

{"hasNext":false,"incremental":[{"data":{"name":null},"path":["currentUser","activeOrganization","suborga",0],"errors":[{"message":"error orga 1","path":["currentUser","activeOrganization","suborga",0]}]},{"data":{"name":"A"},"path":["currentUser","activeOrganization","suborga",1]},{"data":{"name":null},"path":["currentUser","activeOrganization","suborga",2],"errors":[{"message":"error orga 3","path":["currentUser","activeOrganization","suborga",2]}]}]}
--graphql--

