apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__errors_on_incremental_responses.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: "std::str::from_utf8(&stream.next_response().await.unwrap().unwrap()).unwrap()"
---

--graphql
content-type: application/json

{"data":{"currentUser":{"activeOrganization":{"id":"0","suborga":[{"id":"1"},{"id":"2"},{"id":"3"}]}}},"hasNext":true}
--graphql

