apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__filter_nullified_deferred_responses.snap
---
source: apollo-router/src/services/supergraph_service/tests.rs
expression: primary
---
{
  "data": {
    "currentUser": {
      "name": "Ada"
    }
  },
  "hasNext": true
}
