apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__interface_object_typename-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": null,
  "extensions": {
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable array element of type Contact at index 0",
        "path": [
          "searchContacts",
          0
        ]
      },
      {
        "message": "Cannot return null for non-nullable field [Contact!]!.searchContacts",
        "path": [
          "searchContacts"
        ]
      }
    ]
  }
}
