apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__interface_object_typename-4.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "searchContacts": [
      {}
    ]
  }
}
