apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__no_typename_on_interface-2.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: with_typename
---
{
  "data": {
    "dog": {
      "id": "8765",
      "__typename": "Dog",
      "name": "Spot"
    }
  }
}
